--- a/TP_FINAL_AYALA_COCA_NETFLIX_ITBA_VISUALIZACION_DE_LA_INFORMACION_V2.ipynb
+++ b/TP_FINAL_AYALA_COCA_NETFLIX_ITBA_VISUALIZACION_DE_LA_INFORMACION_V2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkh5q+S0wzbv7L4H94xFMi",
+      "authorship_tag": "ABX9TyO2C2cYvnaoa1ugrhJa1rWY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,20 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/CristianAyala/infovis/blob/main/TP_FINAL_AYALA_COCA_NETFLIX_ITBA_VISUALIZACION_DE_LA_INFORMACION_V2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<img src=\"https://www.itba.edu.ar/wp-content/uploads/2021/08/ITBA-logo.png\" width=\"200\">\n",
+        "\n",
+        "<h1><center>Maestría en Management & Analytics</center></h1>\n",
+        "<h2><center>TP: Visualización de la información</center></h2>\n",
+        "<h1><center>Netflix (TOP 10 de Peliculas y Series) Argentina, Uruguay, Paraguay y Bolivia</center></h1>\n",
+        "<h2><center>Alumnos: Ayala Cristian / Coca Ivan</center></h2>"
+      ],
+      "metadata": {
+        "id": "-18lTk934J9R"
+      }
     },
     {
       "cell_type": "code",
@@ -64,7 +78,6 @@
         "plt.rcParams['figure.figsize'] = (12, 6)\n",
         "\n",
         "# Cargar el dataset\n",
-        "# Cambia 'nombre_del_archivo.csv' al nombre de tu archivo subido\n",
         "df = pd.read_csv('netflix.csv',encoding='latin-1')\n",
         "\n",
         "# Diccionario de datos del dataset\n",
@@ -81,14 +94,13 @@
         "\n",
         "print(\"Diccionario de Datos:\")\n",
         "for key, value in data_dictionary.items():\n",
-        "    print(f\"{key}: {value}\")\n",
-        "\n"
+        "    print(f\"{key}: {value}\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# 2. Vista rápida del dataset\n",
+        "# Vista rápida del dataset\n",
         "print(\"Vista previa de los datos:\")\n",
         "print(df.head())\n",
         "\n",
@@ -147,7 +159,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 3. Revisar valores únicos y estadísticos básicos\n",
+        "# Revisar valores únicos y estadísticos básicos\n",
         "print(\"\\nValores únicos por columna:\")\n",
         "print(df.nunique())\n",
         "\n",
@@ -197,7 +209,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Histograma para cumulative_weeks_in_top_10 Este histograma muestra la distribución de las semanas acumuladas en el top 10 para cada título.\n",
+        "# Histograma para cumulative_weeks_in_top_10 Este histograma muestra la distribución de las semanas acumuladas en el top 10 para cada título.\n",
         "plt.figure(figsize=(8, 5))\n",
         "sns.histplot(df['cumulative_weeks_in_top_10'], bins=10, kde=True, color='skyblue')\n",
         "plt.title('Distribución de Semanas Acumuladas en el Top 10')\n",
@@ -230,8 +242,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Boxplot para cumulative_weeks_in_top_10 por país\n",
-        "#Este boxplot muestra la distribución de las semanas acumuladas en el top 10 por país, permitiendo ver si algunos títulos permanecen más tiempo en el top 10 en ciertos países.\n",
+        "# Boxplot para cumulative_weeks_in_top_10 por país\n",
+        "# Este boxplot muestra la distribución de las semanas acumuladas en el top 10 por país, permitiendo ver si algunos títulos permanecen más tiempo en el top 10 en ciertos países.\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.boxplot(x='country_name', y='cumulative_weeks_in_top_10', data=df, palette='Set2')\n",
         "plt.title('Distribución de Semanas Acumuladas en el Top 10 por País')\n",
@@ -275,7 +287,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Detección de Valores Atípicos en cumulative_weeks_in_top_10\n",
+        "# Detección de Valores Atípicos en cumulative_weeks_in_top_10\n",
         "# Cálculo de límites de IQR para 'cumulative_weeks_in_top_10'\n",
         "Q1 = df['cumulative_weeks_in_top_10'].quantile(0.25)\n",
         "Q3 = df['cumulative_weeks_in_top_10'].quantile(0.75)\n",
@@ -326,7 +338,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Este gráfico muestra la diferencia en la duración en el top 10 entre películas y series, permitiéndonos analizar si una categoría tiende a ser más popular por más tiempo.\n",
+        "# Este gráfico muestra la diferencia en la duración en el top 10 entre películas y series, permitiéndonos analizar si una categoría tiende a ser más popular por más tiempo.\n",
         "plt.figure(figsize=(8, 5))\n",
         "sns.boxplot(x='category', y='cumulative_weeks_in_top_10', data=df, palette='muted')\n",
         "plt.title('Comparación de Semanas en el Top 10 entre Películas y Series')\n",
@@ -370,7 +382,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 5. Análisis de popularidad de títulos (semanas en el top 10)\n",
+        "# Análisis de popularidad de títulos (semanas en el top 10)\n",
         "top_titles = df.groupby('show_title')['cumulative_weeks_in_top_10'].max().sort_values(ascending=False).head(10)\n",
         "print(\"\\nTítulos con más semanas acumuladas en el top 10:\")\n",
         "print(top_titles)\n",
@@ -572,7 +584,7 @@
     },
     {
       "source": [
-        "# Scatter plot between weekly_rank and cumulative_weeks_in_top_10\n",
+        "# Scatter plot entre weekly_rank y cumulative_weeks_in_top_10\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.scatterplot(data=df, x='weekly_rank', y='cumulative_weeks_in_top_10', hue='country_name', palette='viridis')\n",
         "plt.title('Relationship between Weekly Rank and Cumulative Weeks in the Top 10')\n",
@@ -610,7 +622,6 @@
         "# Group by country and category, count unique titles\n",
         "country_category_counts = df.groupby(['country_name', 'category'])['show_title'].nunique().reset_index()\n",
         "\n",
-        "# Create the grouped bar chart\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.barplot(data=country_category_counts, x='country_name', y='show_title', hue='category', palette='Set2')\n",
         "plt.title('Number of Unique Titles in Top 10 by Country and Category')\n",
