--- a/TP_FINAL_AYALA_COCA_NETFLIX_ITBA_VISUALIZACION_DE_LA_INFORMACION_V2.ipynb
+++ b/TP_FINAL_AYALA_COCA_NETFLIX_ITBA_VISUALIZACION_DE_LA_INFORMACION_V2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPuKvoiDAamvPy0VNR3kTm",
+      "authorship_tag": "ABX9TyOzZN4bXofnc+dJKML3fjwT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "whFtP5ZUwqCh",
-        "outputId": "8122f5b3-d736-468c-90e2-f812f8647121"
+        "outputId": "8122f5b3-d736-468c-90e2-f812f8647121",
+        "cellView": "form"
       },
       "outputs": [
         {
@@ -68,6 +69,7 @@
         }
       ],
       "source": [
+        "# @title\n",
         "# Importar las librerías necesarias\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -100,6 +102,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Vista rápida del dataset\n",
         "print(\"Vista previa de los datos:\")\n",
         "print(df.head())\n",
@@ -112,7 +115,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7r0GhheSbGmG",
-        "outputId": "f692e3b3-ddb5-4e8d-8379-9405983a74bd"
+        "outputId": "f692e3b3-ddb5-4e8d-8379-9405983a74bd",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -159,6 +163,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Revisar valores únicos y estadísticos básicos\n",
         "print(\"\\nValores únicos por columna:\")\n",
         "print(df.nunique())\n",
@@ -172,7 +177,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uGFrtablW137",
-        "outputId": "657ebd72-50c3-40e2-a48f-18500b0f9d74"
+        "outputId": "657ebd72-50c3-40e2-a48f-18500b0f9d74",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -209,6 +215,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Histograma para cumulative_weeks_in_top_10 Este histograma muestra la distribución de las semanas acumuladas en el top 10 para cada título.\n",
         "plt.figure(figsize=(8, 5))\n",
         "sns.histplot(df['cumulative_weeks_in_top_10'], bins=10, kde=True, color='skyblue')\n",
@@ -223,7 +230,8 @@
           "height": 496
         },
         "id": "W_OrLCX2XYBA",
-        "outputId": "2cb9ce5e-1087-4354-ee1e-8e9c0d204a25"
+        "outputId": "2cb9ce5e-1087-4354-ee1e-8e9c0d204a25",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -242,6 +250,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Boxplot para cumulative_weeks_in_top_10 por país\n",
         "# Este boxplot muestra la distribución de las semanas acumuladas en el top 10 por país, permitiendo ver si algunos títulos permanecen más tiempo en el top 10 en ciertos países.\n",
         "plt.figure(figsize=(10, 6))\n",
@@ -257,15 +266,16 @@
           "height": 660
         },
         "id": "Sz97286yes-B",
-        "outputId": "201752e1-fb48-4a38-eee1-b1dd5c58f085"
+        "outputId": "a22a14eb-6cf7-420d-9275-1c09a1a1093f",
+        "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-15-009544c1da4f>:3: FutureWarning: \n",
+            "<ipython-input-35-0c599e1e5fcf>:4: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -287,6 +297,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Detección de Valores Atípicos en cumulative_weeks_in_top_10\n",
         "# Cálculo de límites de IQR para 'cumulative_weeks_in_top_10'\n",
         "Q1 = df['cumulative_weeks_in_top_10'].quantile(0.25)\n",
@@ -308,7 +319,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yVgU1qTBfVbn",
-        "outputId": "08714677-4f97-4034-ea69-98b7f68bbac2"
+        "outputId": "08714677-4f97-4034-ea69-98b7f68bbac2",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -338,6 +350,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Este gráfico muestra la diferencia en la duración en el top 10 entre películas y series, permitiéndonos analizar si una categoría tiende a ser más popular por más tiempo.\n",
         "plt.figure(figsize=(8, 5))\n",
         "sns.boxplot(x='category', y='cumulative_weeks_in_top_10', data=df, palette='muted')\n",
@@ -352,7 +365,8 @@
           "height": 584
         },
         "id": "QQRnJkREf6x0",
-        "outputId": "9b5495f5-9f57-4de9-a044-5a6dfd4034ed"
+        "outputId": "9b5495f5-9f57-4de9-a044-5a6dfd4034ed",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -382,6 +396,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Análisis de popularidad de títulos (semanas en el top 10)\n",
         "top_titles = df.groupby('show_title')['cumulative_weeks_in_top_10'].max().sort_values(ascending=False).head(10)\n",
         "print(\"\\nTítulos con más semanas acumuladas en el top 10:\")\n",
@@ -402,7 +417,8 @@
           "height": 987
         },
         "id": "qmpF-peqYu9U",
-        "outputId": "b7f5a186-7dc3-4ab8-eae5-9994017ccba6"
+        "outputId": "b7f5a186-7dc3-4ab8-eae5-9994017ccba6",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -441,6 +457,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Número de títulos únicos en el top 10 por país\n",
         "unique_titles_by_country = df.groupby('country_name')['show_title'].nunique().sort_values(ascending=False)\n",
         "\n",
@@ -458,7 +475,8 @@
           "height": 547
         },
         "id": "JVl1-7inzotm",
-        "outputId": "9ec10024-ac60-41c4-edaf-4a125f78f88a"
+        "outputId": "9ec10024-ac60-41c4-edaf-4a125f78f88a",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -477,6 +495,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Título con más semanas en el top 10 por país\n",
         "top_titles_by_country = df.groupby(['country_name', 'show_title'])['cumulative_weeks_in_top_10'].max().reset_index()\n",
         "top_titles_by_country = top_titles_by_country.sort_values(['country_name', 'cumulative_weeks_in_top_10'], ascending=[True, False]).groupby('country_name').head(1)\n",
@@ -495,7 +514,8 @@
           "height": 573
         },
         "id": "wqsjkTTcz0xm",
-        "outputId": "61ede247-b80d-4718-90b1-ca5557fc34d1"
+        "outputId": "61ede247-b80d-4718-90b1-ca5557fc34d1",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -514,6 +534,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Scatter plot entre weekly_rank y cumulative_weeks_in_top_10\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.scatterplot(data=df, x='weekly_rank', y='cumulative_weeks_in_top_10', hue='country_name', palette='viridis')\n",
@@ -530,7 +551,8 @@
           "height": 573
         },
         "id": "QrM-HHS-0nQd",
-        "outputId": "fd50cb41-55d8-4ff7-b673-40dc2250575c"
+        "outputId": "fd50cb41-55d8-4ff7-b673-40dc2250575c",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -549,6 +571,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Promedio de semanas en el top 10 por país\n",
         "avg_weeks_in_top_10 = df.groupby('country_name')['cumulative_weeks_in_top_10'].mean().sort_values()\n",
         "\n",
@@ -566,7 +589,8 @@
           "height": 621
         },
         "id": "Bnn0XTAk1Osg",
-        "outputId": "2ec9aecf-993e-4a94-d436-1099796d0a66"
+        "outputId": "2ec9aecf-993e-4a94-d436-1099796d0a66",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -584,6 +608,7 @@
     },
     {
       "source": [
+        "# @title\n",
         "# Group by country and category, count unique titles\n",
         "country_category_counts = df.groupby(['country_name', 'category'])['show_title'].nunique().reset_index()\n",
         "\n",
@@ -603,7 +628,8 @@
           "height": 621
         },
         "id": "0cUd_P9q5JDo",
-        "outputId": "64bed642-1ef9-4cd1-9e33-1ba0460c5ce7"
+        "outputId": "64bed642-1ef9-4cd1-9e33-1ba0460c5ce7",
+        "cellView": "form"
       },
       "execution_count": 34,
       "outputs": [
@@ -622,6 +648,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "#¿Cómo varía la posición semanal (weekly_rank) a lo largo del tiempo para los títulos más populares?\n",
         "#Gráfico de Líneas: El gráfico de puede mostrar la evolución del ranking semanal de un título en el top 10, permitiendo ver tendencias de popularidad a lo largo del tiempo.\n",
         "# Seleccionar los 5 títulos con más semanas acumuladas en el top 10\n",
@@ -643,7 +670,8 @@
           "height": 573
         },
         "id": "J2dyP40a8z_K",
-        "outputId": "24c57317-a283-4cb0-bf0b-e672c00216e4"
+        "outputId": "24c57317-a283-4cb0-bf0b-e672c00216e4",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -662,6 +690,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "#¿Qué relación hay entre el tamaño de la audiencia (número de semanas en el top 10) y la categoría del contenido?\n",
         "#El tamaño de las burbujas representará las semanas acumuladas en el top 10, lo que da una indicación visual de la duración en el top 10 por categoría y ranking.\n",
         "plt.figure(figsize=(10, 6))\n",
@@ -679,7 +708,8 @@
           "height": 573
         },
         "id": "ateKMOqA86mY",
-        "outputId": "dd122981-314d-438f-ca1b-21b0cda0bfb5"
+        "outputId": "dd122981-314d-438f-ca1b-21b0cda0bfb5",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -698,6 +728,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "#¿Cuáles son los países con mayor diversidad de contenido en el top 10 (cantidad de títulos únicos de diferentes categorías)?\n",
         "#Mapa de Calor (Heatmap): Puedes mostrar la diversidad de contenido en el top 10 para cada país usando un mapa de calor.\n",
         "\n",
@@ -717,7 +748,8 @@
           "height": 730
         },
         "id": "vIkxlTJ18_kM",
-        "outputId": "70ec7e6d-2a64-4458-9c23-63ba79d44d46"
+        "outputId": "70ec7e6d-2a64-4458-9c23-63ba79d44d46",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -736,6 +768,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# Extraer el mes de la semana en el DataFrame\n",
         "df['month'] = pd.to_datetime(df['week'], errors='coerce').dt.month\n",
         "\n",
@@ -752,7 +785,8 @@
           "height": 660
         },
         "id": "v5K22em19Dnf",
-        "outputId": "d55f5527-39b3-4856-bb1d-97aa2bae3c11"
+        "outputId": "d55f5527-39b3-4856-bb1d-97aa2bae3c11",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -782,6 +816,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "#¿Cual es el pais que tiene mas semanas acumuladas en el TOP 10?\n",
         "plt.figure(figsize=(12, 8))\n",
         "sns.violinplot(data=df, x='country_name', y='cumulative_weeks_in_top_10', hue='country_name', palette=\"Spectral\", dodge=False, legend=False)\n",
@@ -797,7 +832,8 @@
           "height": 787
         },
         "id": "MYJOhph69GwJ",
-        "outputId": "705340c8-0dd7-45e2-cb2b-fdc11ac5fad0"
+        "outputId": "705340c8-0dd7-45e2-cb2b-fdc11ac5fad0",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -816,6 +852,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "import pandas as pd\n",
         "\n",
         "# Asegúrate de tener tus datos en un DataFrame llamado 'netflix_data'\n",
@@ -860,7 +897,8 @@
           "height": 913
         },
         "id": "ZCN8oat79KIs",
-        "outputId": "02009457-ee3e-4795-fd10-9116691d3e94"
+        "outputId": "02009457-ee3e-4795-fd10-9116691d3e94",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -909,6 +947,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "# ¿Cual es el % de similitud en titulos del top 10 en los paises?\n",
         "import pandas as pd\n",
         "from itertools import combinations\n",
@@ -976,7 +1015,8 @@
           "height": 590
         },
         "id": "kvLQB6LO9On6",
-        "outputId": "a6b5b4bd-684e-4373-abc4-c9b5cb1380d5"
+        "outputId": "a6b5b4bd-684e-4373-abc4-c9b5cb1380d5",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -1002,6 +1042,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "import pandas as pd\n",
         "from itertools import combinations\n",
         "\n",
@@ -1075,7 +1116,8 @@
           "height": 808
         },
         "id": "-P3u8Tnk9Sv-",
-        "outputId": "e215112a-6843-45bc-a808-a0f808260144"
+        "outputId": "e215112a-6843-45bc-a808-a0f808260144",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
